# mcp-validation

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
mcp_validation/: __init__.py
mcp_validation/cli/: main.py
mcp_validation/config/: settings.py
mcp_validation/core/: __init__.py  http_transport.py  result.py  sse_transport.py  transport.py  transport_factory.py  validator.py
mcp_validation/reporting/: console.py  json_report.py
mcp_validation/utils/: __init__.py  debug.py
mcp_validation/validators/: base.py  capabilities.py  container.py  errors.py  ping.py  protocol.py  registry.py  repo.py  runtime.py  security.py
