[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-validation"
version = "0.1.0"
description = "MCP (Model Context Protocol) server validation tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MCP Validation Contributors"}
]
maintainers = [
    {name = "MCP Validation Contributors"}
]
keywords = ["mcp", "model-context-protocol", "validation", "testing", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "aiohttp>=3.8.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/modelcontextprotocol/mcp-validation"
Repository = "https://github.com/modelcontextprotocol/mcp-validation"
Issues = "https://github.com/modelcontextprotocol/mcp-validation/issues"
Documentation = "https://github.com/modelcontextprotocol/mcp-validation#readme"

[project.scripts]
mcp-validate = "mcp_validation:cli_main"

[tool.setuptools.packages.find]
include = ["mcp_validation*"]

[tool.setuptools.package-data]
mcp_validation = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
norecursedirs = [
    "tmp_evaluation",
    "partner",
    "examples",
    "dist",
    "build",
    ".git",
    ".venv",
    "venv",
    "node_modules",
]
asyncio_mode = "auto"